<resources>
	<string name="app_name">Price Calculator v.1.5</string>
	<string name="ad_mob_id">ca-app-pub-1421069741839692~9245051310</string>
<!--	<string name="ad_mob_test">ca-app-pub-3940256099942544/6300978111</string>-->
	<string name="ad_mob_banner">ca-app-pub-1421069741839692/5923919254</string>
	
	<string name="todo">TODO</string>
	<string name="cost">Show Cost</string>
	<string name="price">Price View</string>
	<string name="price_prev">Final price</string>
	<string name="zeros">€ 0.00</string>
	<string name="chk_vat">VAT Tax</string>
	<string name="chk_vemc">Recycling charges € </string>
	<string name="profit_spinner_title">Profit</string>
	<string name="transport">Transport default € 0.50 # or enter charge below.</string>
	<string name="vat_default">23</string>
	<string name="hint_price">Enter price</string>
	<string name="hint_transport">Enter transport charges</string>
	<string name="chk_transport">Transport charges</string>
	<string name="percent">%</string>
	<string name="calculate_btn">"CALCULATE"</string>
	<string name="vat_setting">Please enter below the correct whole number for a VAT and recycling charged in your country. You can also set max profit percentage</string>
	<string name="savebtn">SAVE</string>
	<string name="vat_setting_ev">Enter VAT value</string>
	<string name="first_use">first_use</string>
	<string name="setting">Settings</string>
	<string name="contact_team">Contact team</string>
	<string name="back">Go Back</string>
	<string name="email_msg_1">Please leave the above for developers to find easier whats wrong. Describe your
		issue bellow.</string>
    <string name="send_email">Send</string>
	<string name="recycling_et">Enter recycling charge</string>
	<string name="recycling">recycling charge</string>
	<string name="rec_defaoult">3.44</string>
	<string name="eula_title">End-User License Agreement (EULA)</string>
	<string name="ok_btn">OK</string>
	<string name="seek_bar_hint">For more acurate profit setting use seekbar below.</string>
	<string name="max_profit_et">Enter max profit</string>
	<string name="max_profit">max profit</string>
	<string name="profit_at">Profit @</string>
	<string name="hide_net">Toggle Price</string>
	<string name="orien">orientation</string>
	<string name="layout_chooser">Chose one of the layouts of the app</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>


	<string-array name="profit_list">
		<item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>25</item>
		<item>30</item>
		<item>35</item>
		<item>40</item>
		<item>45</item>
		<item>50</item>
		<item>55</item>
		<item>60</item>
		<item>65</item>
		<item>70</item>
		<item>75</item>
		<item>80</item>
		<item>90</item>
		<item>100</item>
		<item>125</item>
		<item>150</item>
		<item>175</item>
		<item>200</item>
	</string-array>
	
<string name="eula"><h2>End-User License Agreement (EULA) of <span class="app_name">Price calculator</span></h2>
	
	<p>This End-User License Agreement ("EULA") is a legal agreement between you and <span class="company_name">Non Profit</span></p>
	
	<p>This EULA agreement governs your acquisition and use of our <span class="app_name">Price calculator</span> software ("Software") directly from <span class="company_name">Non Profit</span> or indirectly through a <span class="company_name">Non Profit</span> authorized reseller or distributor (a "Reseller").</p>
	
	<p>Please read this EULA agreement carefully before completing the installation process and using the <span class="app_name">Price calculator</span> software. It provides a license to use the <span class="app_name">Price calculator</span> software and contains warranty information and liability disclaimers.</p>
	
	<p>If you register for a free trial of the <span class="app_name">Price calculator</span> software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the <span class="app_name">Price calculator</span> software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>
	
	<p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>
	
	<p>This EULA agreement shall apply only to the Software supplied by <span class="company_name">Non Profit</span> herewith regardless of whether other software is referred to or described herein. The terms also apply to any <span class="company_name">Non Profit</span> updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. This EULA was created by <a href="https://eulatemplate.com">EULA Template</a> for <span class="app_name">Price calculator</span>.</p>
	
	<h3>License Grant</h3>
	
	<p><span class="company_name">Non Profit</span> hereby grants you a personal, non-transferable, non-exclusive licence to use the <span class="app_name">Price calculator</span> software on your devices in accordance with the terms of this EULA agreement.</p>
	
	<p>You are permitted to load the <span class="app_name">Price calculator</span> software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the <span class="app_name">Price calculator</span> software.</p>
	
	<p>You are not permitted to:</p>
	
	<ul>
		<li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
		<li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
		<li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
		<li>Use the Software in any way which breaches any applicable local, national or international law</li>
		<li>use the Software for any purpose that <span class="company_name">Non Profit</span> considers is a breach of this EULA agreement</li>
	</ul>
	
	<h3>Intellectual Property and Ownership</h3>
	
	<p><span class="company_name">Non Profit</span> shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of <span class="company_name">Non Profit</span>.</p>
	
	<p><span class="company_name">Non Profit</span> reserves the right to grant licences to use the Software to third parties.</p>
	
	<h3>Termination</h3>
	
	<p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <span class="company_name">Non Profit</span>.</p>
	
	<p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>
	
	<h3>Governing Law</h3>
	
	<p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">Ireland</span>.</p>
</string>

</resources>
