<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#fff"
	android:orientation="horizontal">
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
	>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#5D8FFA"
			android:textSize="18sp"
			android:text="@string/eula_title"
			android:textColor="#000"
		/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:text="@string/eula"
			android:textColor="#000"
	    />
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:text="@string/back"
			android:id="@+id/go_back"
	    />
		
	
	</LinearLayout>
</ScrollView>