<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#fff"
		android:orientation="horizontal">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
>
	
		<!--app_name_layout-->
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/app_name_layout"
				android:background="#343280"
		>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/app_name"
					android:textColor="#fff"
					android:layout_gravity="start|center_vertical"
					android:layout_weight="1"
					android:ellipsize="end"
					android:gravity="start|center_vertical"
					android:text="@string/app_name"
					android:textSize="22sp"
			/>
			<Button
					android:id="@+id/settings_btn"
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:background="@drawable/settings_btn"
			/>
		</LinearLayout>
		
		<!--label_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/label_layout"
				android:layout_below="@id/app_name_layout"
				android:layout_marginTop="5dp"
		>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/costLabel"
					android:text="@string/cost"
					android:textSize="18sp"
					android:background="#FFFF0000"
					android:gravity="center"
					android:layout_weight="1"
			/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/priceLabel"
					android:text="@string/price"
					android:textColor="#fff"
					android:textSize="18sp"
					android:background="#09c42c"
					android:gravity="center"
					android:layout_weight="1"
			/>
		</LinearLayout>
		
		<!--display_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/display_layout"
				android:layout_below="@id/label_layout"
		>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="#df3535"
					android:id="@+id/costTF"
					android:text="@string/zeros"
					android:textSize="22sp"
					android:textColor="#fff"
					android:gravity="center"
					android:layout_weight="1"
			/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="#02ab21"
					android:id="@+id/priceTF"
					android:text="@string/zeros"
					android:textSize="22sp"
					android:textColor="#fff"
					android:gravity="center"
					android:layout_weight="1"
			/>
		</LinearLayout>
		
		<!--net_cost_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/net_cost_layout"
				android:orientation="horizontal"
				android:layout_below="@id/display_layout"
				android:layout_marginTop="5dp"
		>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/netto"
				android:textSize="26sp"
				android:background="#f3f3f5"
				android:textColor="#000000"
				android:inputType="numberDecimal"
				android:hint="@string/hint_price"
				android:autofillHints="@string/hint_price"
			/>
		</LinearLayout>
		
		<!--checkboxes_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:id="@+id/checkboxes_layout"
				android:layout_below="@id/net_cost_layout"
		>
			<CheckBox
					android:id="@+id/chkvat"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/chk_vat"
					android:textColor="#000"
					android:textSize="20sp"
			/>
			<CheckBox
					android:id="@+id/chkvemc"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/chk_vemc"
					android:textColor="#000"
					android:textSize="20sp"
			/>
			<CheckBox
					android:id="@+id/chktransport"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/chk_transport"
					android:textColor="#000"
					android:textSize="20sp"
			/>
		</LinearLayout>
		
		<!--transport_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#f0f0f0"
				android:id="@+id/transport_layout"
				android:orientation="horizontal"
				android:layout_below="@id/checkboxes_layout"
		>
			
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/transport"
					android:text="@string/transport"
					android:textSize="14sp"
					android:textColor="#000"
			/>
		</LinearLayout>
		
		<!--transport_edit_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/transport_edit_layout"
				android:orientation="horizontal"
				android:layout_below="@id/transport_layout"
				android:layout_marginTop="5dp"
		>
			<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/transport_edit"
					android:textSize="24sp"
					android:background="#c7c5e2"
					android:textColor="#000000"
					android:inputType="numberDecimal"
					android:hint="@string/hint_transport"
			/>
		</LinearLayout>
		
		<!--spinner_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/spinner_layout"
				android:orientation="horizontal"
				android:layout_below="@id/transport_edit_layout"
				android:layout_marginTop="5dp"
		>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/profit_spinner_title"
					android:gravity="center"
					android:layout_weight="1"
					android:textColor="#000"
			/>
			<Spinner
					android:id="@+id/spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:prompt="@string/profit_spinner_title"
					android:entries="@array/profit_list"
					android:background="@drawable/border"
					android:gravity="center"
					android:minWidth="80dp"
			/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/percent"
					android:gravity="center"
					android:layout_weight="1"
					android:textColor="#000"
			/>
		</LinearLayout>
		
		<!--profit_text_view_layout-->
		<LinearLayout
				android:id="@+id/profit_text_view_layout"
				android:layout_below="@id/spinner_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<TextView
					android:id="@+id/profit_percent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text=""
					android:gravity="center"
					android:layout_weight="1"
					android:textColor="#000"
			/>
		</LinearLayout>
		
		<!--vat_seek_bar_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/vat_seek_bar_layout"
				android:layout_below="@id/profit_text_view_layout"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
		>
			<SeekBar
					android:id="@+id/vat_seek_bar"
					style="@style/Base.Widget.AppCompat.SeekBar.Discrete"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:max="200"
					android:progress="25"
					android:background="#0f7"
			/>
		</LinearLayout>
		
		<!--calculate_btn-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/calculate_btn_layout"
				android:orientation="horizontal"
				android:layout_below="@id/vat_seek_bar_layout"
				android:layout_marginTop="5dp"
		>
			<Button
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:id="@+id/calculate_btn"
					android:textColor="#ffffff"
					android:background="#0d0dc9"
					android:text="@string/calculate_btn"
					android:textSize="24sp"
					android:layout_marginRight="60dp"
					android:layout_marginLeft="60dp"
			/>
		</LinearLayout>
		
		<!--google add layout-->
		<com.google.android.gms.ads.AdView
				xmlns:ads="http://schemas.android.com/apk/res-auto"
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_alignParentBottom="true"
				android:layout_below="@+id/calculate_btn_layout"
				ads:adSize="BANNER"
				ads:adUnitId="@string/ad_mob_banner">
		</com.google.android.gms.ads.AdView>
	</RelativeLayout>
</ScrollView>