<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#fff"
	android:orientation="horizontal">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#fff"
		android:orientation="horizontal"
		android:layout_gravity="center"
		android:layout_marginRight="30dp"
		android:layout_marginLeft="30dp"
		>

		<!--app_name_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:id="@+id/app_name_layout"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/app_name"
				android:background="@drawable/border"
				android:textSize="18sp"
				android:textColor="#fff"
				android:text="@string/app_name"
				android:gravity="center"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				/>
		</LinearLayout>

		<!--vat_tv_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/vat_tv_layout"
			android:layout_below="@+id/app_name_layout"
			android:orientation="horizontal"
			android:layout_marginTop="15dp"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/vat_setting"
				android:id="@+id/vat_settings_tv"
				android:textSize="20sp"
				android:gravity="center"
				android:textColor="#000"
				android:background="#fff"
				android:paddingLeft="10sp"
				android:paddingRight="10sp"
				/>

		</LinearLayout>

		<!--vat_et_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/vat_et_layout"
			android:layout_below="@+id/vat_tv_layout"
			android:orientation="horizontal"
			android:layout_marginTop="15dp"
			>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/vat_settings_et"
				android:textSize="20sp"
				android:inputType="numberDecimal"
				android:hint="@string/vat_setting_ev"
				android:gravity="center"
				android:layout_weight="4"
				android:maxWidth="20dp"
                android:importantForAutofill="no" />
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/save_btn"
				android:layout_weight="1"
				android:text="@string/savebtn"
				android:scaleType="fitXY"
				/>
		</LinearLayout>

		<!--recycling_et_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:id="@+id/recycling_et_layout"
			android:layout_marginTop="5dp"
			android:layout_below="@id/vat_et_layout"
			>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/recycling_et"
				android:textSize="20sp"
				android:inputType="numberDecimal"
				android:hint="@string/recycling_et"
				android:gravity="center"
				android:layout_weight="4"
                android:importantForAutofill="no" />
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/save_r_btn"
				android:layout_weight="1"
				android:text="@string/savebtn"
				android:scaleType="fitXY"
				/>
		</LinearLayout>

		<!--max_profit_et_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:id="@+id/max_profit_et_layout"
			android:layout_marginTop="5dp"
			android:layout_below="@id/recycling_et_layout"
			>
			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/max_profit_et"
				android:textSize="20sp"
				android:inputType="numberDecimal"
				android:hint="@string/max_profit_et"
				android:gravity="center"
				android:layout_weight="4"
            />
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/save_max_profit_btn"
				android:layout_weight="1"
				android:text="@string/savebtn"
				android:scaleType="fitXY"
				/>
		</LinearLayout>

		<!--todo btn's for language-->
		<!--orientation_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/orientation_layout"
			android:layout_below="@id/max_profit_et_layout"
			android:orientation="horizontal"
            android:baselineAligned="false"
            >
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center"
				>
				<ImageButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/img_btn_V"
					android:background="@drawable/vert"
					android:layout_marginBottom="2.5dp"
                    android:contentDescription="@string/vertical"
                />
			</LinearLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center"
				>
				<ImageButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/img_btn_H"
					android:background="@drawable/horizon"
                    android:contentDescription="@string/horizontal" />
			</LinearLayout>
			<!--<LinearLayout-->
			<!--android:layout_width="wrap_content"-->
			<!--android:layout_height="match_parent"-->
			<!--android:layout_weight="1"-->
			<!--android:orientation="horizontal"-->
			<!--&gt;-->
			<!--<TextView-->
			<!--android:layout_width="wrap_content"-->
			<!--android:layout_height="match_parent"-->
			<!--android:textColor="@color/black"-->
			<!--android:textSize="18sp"-->
			<!--android:text="@string/layout_chooser"-->
			<!--android:gravity="center|clip_vertical"-->
			<!--/>-->
			<!--</LinearLayout>-->
		</LinearLayout>

		<!--contact_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="5dp"
			android:orientation="horizontal"
			android:id="@+id/contact_layout"
			android:layout_below="@id/orientation_layout"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="18sp"
				android:text="@string/contact_team"
				android:layout_weight="1"
				android:gravity="center"
				/>
			<ImageButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/email_me"
				android:background="@drawable/email"
				android:layout_weight="1"
                android:contentDescription="@string/send_email" />
		</LinearLayout>

		<!--todo buy me a coffee & sounds & rate the app & other apps-->

		<!--eula_btn_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/eula_btn_layout"
			android:layout_below="@id/contact_layout"
			android:orientation="horizontal"
			android:gravity="center"
			>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/eula_btn"
				android:text="@string/eula_title"
				/>

		</LinearLayout>

		<!--go_back_layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/go_back_layout"
			android:layout_below="@id/eula_btn_layout"
			android:orientation="horizontal"
			android:gravity="center"
			>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/go_back"
				android:text="@string/back"
				/>
		</LinearLayout>

		<!--google add layout-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_below="@+id/go_back_layout"
			>
			<com.google.android.gms.ads.AdView
				xmlns:ads="http://schemas.android.com/apk/res-auto"
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"

				android:layout_marginTop="5dp"
				ads:adSize="BANNER"
				ads:adUnitId="@string/ad_mob_banner">
			</com.google.android.gms.ads.AdView>
		</LinearLayout>
	</RelativeLayout>
</ScrollView>