<?xml version="1.0" encoding="utf-8"?>

<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/darker_gray"
		android:orientation="horizontal">
	<RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@android:color/darker_gray"
			android:orientation="horizontal"
	>
		
		<!--app_name_layout-->
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/app_name_layout"
				android:background="#343280"
		>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/app_name"
					android:textColor="#fff"
					android:layout_gravity="left|center_vertical"
					android:layout_weight="1"
					android:ellipsize="end"
					android:gravity="left|center_vertical"
					android:text="@string/app_name"
					android:textSize="22sp"
			/>
			<Button
					android:id="@+id/settings_btn"
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:background="@drawable/settings_btn"
			/>		</LinearLayout>
		
		<!--label_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/label_layout"
				android:layout_below="@id/app_name_layout"
				android:layout_marginLeft="40dp"
				android:layout_marginRight="40dp"
		>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/costLabel"
					
					android:backgroundTint="#FFFF0000"
					android:background="@drawable/round_border_l"
					android:text="@string/cost"
					android:textSize="20sp"
					android:gravity="center"
					android:layout_weight="1"
			/>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:backgroundTint="#ab0207"
					android:background="@drawable/round_border_r"
					android:id="@+id/priceLabel"
					android:text="@string/price"
					android:textColor="#fff"
					android:textSize="20sp"
					android:gravity="center"
					android:layout_weight="1"
			/>
		</LinearLayout>
		
		<!--display_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/display_layout"
				android:layout_below="@id/label_layout"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
		>
			
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="#FFFF0000"
					android:layout_weight="1"
					android:id="@+id/costTF"
					android:text="@string/zeros"
					android:textSize="24sp"
					android:gravity="center"
			/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="#ab0207"
					android:id="@+id/priceTF"
					android:text="@string/zeros"
					android:textSize="24sp"
					android:textColor="#fff"
					android:layout_weight="1"
					android:gravity="center"
			/>
		</LinearLayout>
		
		<!--net cost layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/net_cost_layout"
				android:orientation="horizontal"
				android:layout_below="@id/display_layout"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
		>
			<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/netto"
					android:textSize="26sp"
					android:gravity="center"
					android:background="#c7c5e2"
					android:textColor="#000000"
					android:inputType="numberDecimal"
					android:hint="@string/hint_price"
			/>
		</LinearLayout>
		<!--vat_seek_bar_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/vat_seek_bar_layout"
				android:layout_below="@id/net_cost_layout"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
		>
			<SeekBar
					android:id="@+id/vat_seek_bar"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
			/>
		</LinearLayout>
		
		<!--checkboxes_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:id="@+id/checkboxes_layout"
				android:layout_below="@id/vat_seek_bar_layout"
		>
			<CheckBox
					android:id="@+id/chkvat"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/chk_vat"
					android:textSize="22sp"
					android:layout_marginLeft="40dp"
					android:layout_marginRight="40dp"
			/>
			<CheckBox
					android:id="@+id/chkvemc"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/chk_vemc"
					android:textSize="22sp"
					android:layout_marginLeft="40dp"
					android:layout_marginRight="40dp"
			/>
			<CheckBox
					android:id="@+id/chktransport"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/chk_transport"
					android:textSize="22sp"
					android:layout_marginLeft="40dp"
					android:layout_marginRight="40dp"
			/>
		</LinearLayout>
		
		<!--transport_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#f0f0f0"
				android:layout_below="@id/checkboxes_layout"
				android:id="@+id/transport_layout"
				android:orientation="horizontal"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
		>
			
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/transport"
					android:text="@string/transport"
					android:textSize="24sp"
					android:gravity="center"
			/>
		</LinearLayout>
		
		<!--transport_edit_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/transport_edit_layout"
				android:layout_below="@id/transport_layout"
				android:orientation="horizontal"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
		>
			<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/transport_edit"
					android:textSize="24sp"
					android:background="#c7c5e2"
					android:textColor="#000000"
					android:inputType="numberDecimal"
					android:hint="@string/hint_transport"
			/>
		</LinearLayout>
		
		<!--spinner_layout-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/spinner_layout"
				android:layout_below="@id/transport_edit_layout"
				android:orientation="horizontal"
				android:layout_marginLeft="40dp"
				android:layout_marginRight="40dp"
				android:layout_marginStart="40dp"
				android:layout_marginEnd="40dp"
		>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/profit_spinner_title"
					android:gravity="center"
					android:textColor="#000"
					android:layout_weight="1"
					android:maxWidth="40dp"
			/>
			<Spinner
					android:id="@+id/spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:prompt="@string/profit_spinner_title"
					android:entries="@array/profit_list"
					android:textSize="28sp"
					android:textAlignment="center"
			/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/percent"
					android:textColor="#000"
					android:gravity="center"
			/>
		</LinearLayout>
		
		<!--calculate_btn-->
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/calculate_btn_layout"
				android:orientation="horizontal"
				android:layout_below="@id/spinner_layout"
				android:layout_marginTop="5dp"
		>
			<Button
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:id="@+id/calculate_btn"
					android:textColor="#ffff00"
					android:background="#0000ff"
					android:textSize="24sp"
					android:text="@string/calculate_btn"
					android:layout_marginRight="100dp"
					android:layout_marginLeft="40dp"
			/>
		
		</LinearLayout>
	
	</RelativeLayout>
</ScrollView>